{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 424,
  "lineage": "2740fa14-6dd0-0595-87c7-8a9ec21af839",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d57c57524efd04ad",
            "association_id": "eipassoc-0f9c70c53b8515615",
            "domain": "vpc",
            "id": "eipalloc-0d57c57524efd04ad",
            "instance": "i-09ecdfe0fcfdd5811",
            "network_border_group": "us-east-2",
            "network_interface": "eni-036c14fb00497fb09",
            "private_dns": "ip-10-0-0-71.us-east-2.compute.internal",
            "private_ip": "10.0.0.71",
            "public_dns": "ec2-3-136-150-32.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.150.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-0"
            },
            "tags_all": {
              "Name": "EIP-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea542dc51fe4dd7b",
            "association_id": "eipassoc-0fb71b05c1a7b8df9",
            "domain": "vpc",
            "id": "eipalloc-0ea542dc51fe4dd7b",
            "instance": "i-00d3771e6e41e3c34",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06bf9821545d63375",
            "private_dns": "ip-10-0-24-163.us-east-2.compute.internal",
            "private_ip": "10.0.24.163",
            "public_dns": "ec2-18-188-7-101.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.7.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-1"
            },
            "tags_all": {
              "Name": "EIP-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01397a048a97500a5",
            "association_id": "eipassoc-07329e684f47e9fd4",
            "domain": "vpc",
            "id": "eipalloc-01397a048a97500a5",
            "instance": "i-04801a47a13ebb5ea",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00818df9d7fcd770c",
            "private_dns": "ip-10-0-44-149.us-east-2.compute.internal",
            "private_ip": "10.0.44.149",
            "public_dns": "ec2-13-59-130-23.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.130.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-2"
            },
            "tags_all": {
              "Name": "EIP-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fea1abf1c1befc0",
            "arn": "arn:aws:ec2:us-east-2:058126304313:instance/i-09ecdfe0fcfdd5811",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ecdfe0fcfdd5811",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-036c14fb00497fb09",
            "private_dns": "ip-10-0-0-71.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da867627d7ad063e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-016660908369afbc2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046bd1c83ff85a0f7",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "Name": "infra-app"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "Name": "infra-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016660908369afbc2"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fea1abf1c1befc0",
            "arn": "arn:aws:ec2:us-east-2:058126304313:instance/i-00d3771e6e41e3c34",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d3771e6e41e3c34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06bf9821545d63375",
            "private_dns": "ip-10-0-24-163.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.24.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-013647cd7865c38fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-016660908369afbc2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4c436a77cef2f5f",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "Name": "infra-app"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "Name": "infra-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016660908369afbc2"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fea1abf1c1befc0",
            "arn": "arn:aws:ec2:us-east-2:058126304313:instance/i-04801a47a13ebb5ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04801a47a13ebb5ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00818df9d7fcd770c",
            "private_dns": "ip-10-0-44-149.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.44.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06343d2e1feed43b1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-016660908369afbc2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a782152d2bb4e0d",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "Name": "infra-app"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "Name": "infra-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016660908369afbc2"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058126304313:internet-gateway/igw-01c4eb85d4275c793",
            "id": "igw-01c4eb85d4275c793",
            "owner_id": "058126304313",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-090ae1966e0702d23"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578-20231210210230526600000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578",
            "target_id": "i-09ecdfe0fcfdd5811"
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs",
            "module.load_balancer.aws_lb_target_group.my_target_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578-20231210210230116100000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578",
            "target_id": "i-00d3771e6e41e3c34"
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs",
            "module.load_balancer.aws_lb_target_group.my_target_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578-20231210210230773100000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578",
            "target_id": "i-04801a47a13ebb5ea"
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs",
            "module.load_balancer.aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c4eb85d4275c793",
            "id": "r-rtb-057ce9719eed29d161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057ce9719eed29d16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_internet_gateway.igw",
            "module.ec2_instance.aws_route_table.public_rt",
            "module.ec2_instance.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058126304313:route-table/rtb-057ce9719eed29d16",
            "id": "rtb-057ce9719eed29d16",
            "owner_id": "058126304313",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ae1966e0702d23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080e65f09b86d985b",
            "route_table_id": "rtb-057ce9719eed29d16",
            "subnet_id": "subnet-046bd1c83ff85a0f7"
          },
          "dependencies": [
            "module.ec2_instance.aws_route_table.public_rt",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3514d8bf12ff1d2",
            "route_table_id": "rtb-057ce9719eed29d16",
            "subnet_id": "subnet-0c4c436a77cef2f5f"
          },
          "dependencies": [
            "module.ec2_instance.aws_route_table.public_rt",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd1e8a586854198c",
            "route_table_id": "rtb-057ce9719eed29d16",
            "subnet_id": "subnet-07a782152d2bb4e0d"
          },
          "dependencies": [
            "module.ec2_instance.aws_route_table.public_rt",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058126304313:security-group/sg-016660908369afbc2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016660908369afbc2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CustomSG",
            "name_prefix": "",
            "owner_id": "058126304313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ae1966e0702d23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058126304313:subnet/subnet-046bd1c83ff85a0f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046bd1c83ff85a0f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058126304313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-0"
            },
            "tags_all": {
              "Name": "Public-Subnet-0"
            },
            "vpc_id": "vpc-090ae1966e0702d23"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058126304313:subnet/subnet-0c4c436a77cef2f5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4c436a77cef2f5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058126304313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-090ae1966e0702d23"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058126304313:subnet/subnet-07a782152d2bb4e0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a782152d2bb4e0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058126304313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-090ae1966e0702d23"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058126304313:vpc/vpc-090ae1966e0702d23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074fd5a7864847215",
            "default_route_table_id": "rtb-09a30a64d6afa9b1a",
            "default_security_group_id": "sg-01ef99732ed8e083d",
            "dhcp_options_id": "dopt-08661d89dca267eba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090ae1966e0702d23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a30a64d6afa9b1a",
            "owner_id": "058126304313",
            "tags": {
              "Name": "CustomVPC"
            },
            "tags_all": {
              "Name": "CustomVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:loadbalancer/app/my-load-balancer/8832e0718e8e1232",
            "arn_suffix": "app/my-load-balancer/8832e0718e8e1232",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-load-balancer-1479018416.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:058126304313:loadbalancer/app/my-load-balancer/8832e0718e8e1232",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-016660908369afbc2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046bd1c83ff85a0f7"
              },
              {
                "subnet_id": "subnet-07a782152d2bb4e0d"
              },
              {
                "subnet_id": "subnet-0c4c436a77cef2f5f"
              }
            ],
            "subnets": [
              "subnet-046bd1c83ff85a0f7",
              "subnet-07a782152d2bb4e0d",
              "subnet-0c4c436a77cef2f5f"
            ],
            "tags": {
              "Name": "MyLoadBalancer"
            },
            "tags_all": {
              "Name": "MyLoadBalancer"
            },
            "vpc_id": "vpc-090ae1966e0702d23",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:listener/app/my-load-balancer/8832e0718e8e1232/577428050a752396",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:058126304313:listener/app/my-load-balancer/8832e0718e8e1232/577428050a752396",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:loadbalancer/app/my-load-balancer/8832e0718e8e1232",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs",
            "module.load_balancer.aws_lb.my_load_balancer"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "my_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:listener-rule/app/my-load-balancer/8832e0718e8e1232/577428050a752396/50db68306751b261",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:058126304313:listener-rule/app/my-load-balancer/8832e0718e8e1232/577428050a752396/50db68306751b261",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:listener/app/my-load-balancer/8832e0718e8e1232/577428050a752396",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_security_group.sg",
            "module.ec2_instance.aws_subnet.public_subnet",
            "module.ec2_instance.aws_vpc.custom_vpc",
            "module.ec2_instance.data.aws_availability_zones.azs",
            "module.load_balancer.aws_lb.my_load_balancer",
            "module.load_balancer.aws_lb_listener.my_listener",
            "module.load_balancer.aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578",
            "arn_suffix": "targetgroup/my-target-group/d0ab75a0825e2578",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:058126304313:targetgroup/my-target-group/d0ab75a0825e2578",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-090ae1966e0702d23"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.custom_vpc"
          ]
        }
      ]
    }
  ]
}